# starting-ragchatbot-codebase

./: CLAUDE.md  backend-tool-refactor.md  document-processing-flow.md  frontend-changes.md  pyproject.toml  query-flow-diagram.md
.claude/commands/: implement-feature.md
.github/workflows/: claude.yml
backend/: PIPELINE_ARCHITECTURE_ANALYSIS.md  ai_generator.py  ai_generator_pipeline.py  app.py  rag_system.py  search_tools.py  test_pipeline_architecture.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh  typecheck.sh
